# Sqeak

./: .gitignore  Bak.ini  STRUCTURE  Sqeak.code-workspace  Sqeak.sh  XYZTable.ini  bak.ini  codes.cpp  codes.hpp  common.cpp  common.hpp  config.ini  grbl.c  grbl.cpp  grbl.geany  grbl.hpp  grbl.tags  grbltest  main.cpp  makefile  queue.c  queue.cpp  queue.h  queue.hpp  uiconfig.ini
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build-dir/glcore/: Makefile  cmake_install.cmake
build-dir/sketcher/: Makefile  cmake_install.cmake
fonts/ConvertToSourceFile/: binary_to_compressed_c
img/: Blank Circle.xcf
src/: CMakeLists.txt  common.cpp  common.h  common.hpp  file.cpp  file.hpp  functions.cpp  functions.h  gclist.cpp  gclist.h  gcreader.cpp  gcreader.h  grbl.cpp  grbl.h  grbl.hpp  grblcodes.cpp  grblcodes.h  grblcodes.hpp  main.cpp  makefile  makefilebak  pch.hpp  queue.cpp  queue.hpp  serial.cpp  serial.h  settings.cpp  settings.h
src/build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build-dir/glcore/: Makefile  cmake_install.cmake
src/build-dir/sketcher/: Makefile  cmake_install.cmake
src/dev/: ads1115.cpp  ads1115.h  joystick.cpp  joystick.h
src/functions/: func_draw.cpp  func_draw.h  func_facingcut.cpp  func_facingcut.h  func_qrcode.cpp  func_qrcode.h  func_slot.cpp  func_slot.h  func_square.cpp  func_square.h  functions.cpp  functions.h  toolsettings.cpp  toolsettings.h
src/glcore/: CMakeLists.txt  camera.cpp  camera.h  glcore.cpp  glcore.h  glm.h  globjects.cpp  globjects.h  glsys.cpp  glsys.h  material.cpp  material.h  modelloader.cpp  modelloader.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/glcore/build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/grbl/: CMakeLists.txt  gclist.cpp  gclist.h  grbl.cpp  grbl.h  grbl_common.h  grblcodes.cpp  grblcodes.h  serial.cpp  serial.h
src/gui/: filebrowser.cpp  filebrowser.h  frames.cpp  frames.h  frames.hpp  gui.cpp  gui.h  gui.hpp  guiBAK.cppBAK  imgui_custommodules.cpp  imgui_custommodules.h  imgui_modules.cpp  imgui_modules.h  jogcontroller.cpp  jogcontroller.h  shader.cpp  shader.h  shader.hpp  toolbar.cpp  toolbar.h  viewer.cpp  viewer.h
src/gui/imgui/: imgui_demo.cpp
src/gui/stb_image/: imgui_stb_image.cpp  imgui_stb_image.h  stb_image.h
src/libs/: Geos.cpp  Geos.h  file.cpp  file.h  geom.cpp  geom.h  geos.cpp  geos.h  qrcodegen.h
src/sketch/: gcodebuilder.cpp  gcodebuilder.h  sketch.cpp  sketch.h  toolsettings.cpp  toolsettings.h
src/sketch/functions/: func_draw.cpp  func_draw.h  func_facingcut.cpp  func_qrcode.h  func_slot.cpp  func_slot.h  func_square.cpp  func_square.h  functions.cpp  functions.h  toolsettings.cpp  toolsettings.h
src/sketch/functions/OLD/: func_draw.cpp  func_draw.h  func_facingcut.cpp  func_facingcut.h  func_qrcode.cpp  func_slot.cpp  func_square.cpp  func_square.h  functions.cpp
src/sketcher/: CMakeLists.txt  constraints.cpp  constraints.h  elementfactory.cpp  elementfactory.h  elements.cpp  elements.h  sketch.cpp  sketch.h  sketch_common.cpp  sketch_common.h
